feature: upload file to firebase

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,18 @@
+# URL
 API_URL = 
 PORT = 
+
+# MongoDB
 MONGODB_URI = 
+
+# Token
 PRIVATE_KEY = 
 EXPIRE_TIME = 
+sdsd
+
+# Firebase
+FIREBASE_API_KEY= 
+FIREBASE_AUTH_DOMAIN= 
+FIREBASE_PROJECT_ID= 
+FIREBASE_STORAGE_BUCKET= 
+FIREBASE_APP_ID= 
