--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "firebase": "^9.5.0",
+    "googleapis": "^126.0.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1"
   }
 }
