fix: send mail use google API

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # URL
-API_URL = 
-PORT = 
+BASE_URL = http://127.0.0.1:
+API_URL = /api/v1
+PORT = 8000
 
 # MongoDB
 MONGODB_URI = 
@@ -14,4 +15,17 @@ FIREBASE_API_KEY=
 FIREBASE_AUTH_DOMAIN= 
 FIREBASE_PROJECT_ID= 
 FIREBASE_STORAGE_BUCKET= 
+FIREBASE_MESSAGING_SENDER_ID= 
 FIREBASE_APP_ID= 
+
+# Email
+EMAIL_HOST = 
+EMAIL_SERVICE = 
+EMAIL_USER = 
+EMAIL_PASS = 
+
+# Google API - OAuth2
+CLIENT_ID = 
+CLIENT_SECRET = 
+REDIRECT_URI = 
+REFRESH_TOKEN = 
