fix: env variables

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,10 @@ PORT = 8000
 # MongoDB
 MONGODB_URI = 
 
-# Token
-PRIVATE_KEY = 
-EXPIRE_TIME = 
+# JWT
+JWT_PRIVATE_KEY = 
+JWT_EXPIRE_TIME = 
+JWT_REFRESH_TOKEN = 
 
 # Firebase
 FIREBASE_API_KEY= 
