--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^126.0.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "mailgen": "^2.0.27",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
