chore: remove unnecessary command

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # URL
+USER_CLIENT =
+PUBLIC_HOST =
 NETWORK_HOST = 192.168.x.xxx
 LOCAL_HOST = 127.0.0.x
 API_URL = /api/v1
@@ -25,9 +27,3 @@ EMAIL_HOST =
 EMAIL_SERVICE = 
 EMAIL_USER = 
 EMAIL_PASS = 
-
-# Google API - OAuth2
-CLIENT_ID = 
-CLIENT_SECRET = 
-REDIRECT_URI = 
-REFRESH_TOKEN = 
